fixed spacing of menu toggle

--- a/open-fin-al/src/index.css
+++ b/open-fin-al/src/index.css
@@ -65,7 +65,6 @@ footer {
   position: fixed;
   bottom: 0;
   left: 0;
-  right: 0;
   background-color: var(--background-color);
   color: var(--text-color-medium-dark);
   padding: 15px;
@@ -279,7 +278,7 @@ code {
 } */
 
 .sidebar.collapsed {
-  max-width: 48px;
+  max-width: 55px;
 }
 
 .sidebar.collapsed::-webkit-scrollbar {
@@ -896,7 +895,7 @@ body {
   top: 0;
   left: 0;
   width: 20%; /* Adjust width as needed */
-  height: 100%;
+  height: 100vh;
   background-color: var(--background-color); /* Adjust background color as needed */
   z-index: 1000; /* Ensure it stays on top of other elements */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1); /* Optional: add a shadow for better visibility */
@@ -962,7 +961,7 @@ nav ul li a {
 }
 
 nav ul li a .material-icons {
-  margin-right: 10px;
+  margin-right: 16px;
 }
 
 /* Add background color on hover */
